fix: Avatar outline on safari & center (#5997)

--- a/src/components/Avatar.scss
+++ b/src/components/Avatar.scss
@@ -4,8 +4,8 @@
   .Avatar {
     width: 1.25rem;
     height: 1.25rem;
+    position: relative;
     border-radius: 100%;
-    outline: 2px solid var(--avatar-border-color);
     outline-offset: 2px;
     display: flex;
     justify-content: center;
@@ -19,6 +19,17 @@
     &-img {
       width: 100%;
       height: 100%;
+      border-radius: 100%;
+    }
+
+    &::before {
+      content: "";
+      position: absolute;
+      top: -3px;
+      right: -3px;
+      bottom: -3px;
+      left: -3px;
+      border: 1px solid var(--avatar-border-color);
       border-radius: 100%;
     }
   }
